# inkcpp

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml  release.yml
Documentation/: InkBIN-File-Structure.md
inkcpp/: header.cpp  story_impl.h
inkcpp_compiler/: CMakeLists.txt  binary_reader.cpp  binary_reader.h  compiler.cpp  json.hpp  json_emitter.cpp  json_emitter.h  reverse_compiler.cpp  reverse_compiler.h
inkcpp_compiler/include/: compiler.h
inkcpp_decompiler/: CMakeLists.txt  binstr_modifier.cpp  binstr_modifier.h  decompiler.cpp  instruction_reader.cpp  instruction_reader.h  json_emitter.cpp  json_emitter.h  main.cpp  reverse_compiler.cpp  reverse_compiler.h
inkcpp_decompiler/include/: decompiler.h
inkcpp_test/: BinStringModifier.cpp  CMakeLists.txt  InkyJson.cpp
inkcpp_test/ink/: $.inkb
